@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -22,53 +23,76 @@ class HardwoodDestinationMaterializationCasesTest {
     void allPathsPreserveOrderingAndMaterializeTheSameSourceArrays() throws Exception {
         HardwoodDestinationMaterializationCases.SourceArrays source =
                 HardwoodDestinationMaterializationCases.createSourceArrays(ROW_COUNT);
-        ExecutorService executor = Executors.newFixedThreadPool(PROJECTION_COLUMN_COUNT);
+        ExecutorService fixedExecutor =
+                Executors.newFixedThreadPool(PROJECTION_COLUMN_COUNT);
+        ExecutorService virtualThreadPerTaskExecutor =
+                Executors.newVirtualThreadPerTaskExecutor();
         try {
             HardwoodMarketDataProjectionStore sequentialStore =
                     HardwoodDestinationMaterializationCases.sequentialRangedBatches(
                             source, BATCH_SIZE);
-            HardwoodMarketDataProjectionStore perBatchBarrierStore =
+            HardwoodMarketDataProjectionStore fixedPerBatchBarrierStore =
                     HardwoodDestinationMaterializationCases.executorPerBatchBarrierColumnAppender(
-                            source, BATCH_SIZE, executor);
-            HardwoodMarketDataProjectionStore pipelinedStore =
+                            source, BATCH_SIZE, fixedExecutor);
+            HardwoodMarketDataProjectionStore fixedPipelinedStore =
                     HardwoodDestinationMaterializationCases.executorPipelinedColumnAppender(
-                            source, BATCH_SIZE, executor);
+                            source, BATCH_SIZE, fixedExecutor);
+            HardwoodMarketDataProjectionStore virtualThreadPerTaskPerBatchBarrierStore =
+                    HardwoodDestinationMaterializationCases.executorPerBatchBarrierColumnAppender(
+                            source, BATCH_SIZE, virtualThreadPerTaskExecutor);
+            HardwoodMarketDataProjectionStore virtualThreadPerTaskPipelinedStore =
+                    HardwoodDestinationMaterializationCases.executorPipelinedColumnAppender(
+                            source, BATCH_SIZE, virtualThreadPerTaskExecutor);
             ArrayList<HardwoodMarketDataRow> rows =
                     HardwoodDestinationMaterializationCases.arrayListRows(
                             source, BATCH_SIZE);
 
-            assertEquals(ROW_COUNT, sequentialStore.size());
-            assertEquals(ROW_COUNT, perBatchBarrierStore.size());
-            assertEquals(ROW_COUNT, pipelinedStore.size());
+            List<HardwoodMarketDataProjectionStore> stores = List.of(
+                    sequentialStore,
+                    fixedPerBatchBarrierStore,
+                    fixedPipelinedStore,
+                    virtualThreadPerTaskPerBatchBarrierStore,
+                    virtualThreadPerTaskPipelinedStore);
+            for (HardwoodMarketDataProjectionStore store : stores) {
+                assertEquals(ROW_COUNT, store.size());
+                assertEquals(ROW_COUNT, storeCapacity(store));
+                assertSealed(store);
+            }
             assertEquals(ROW_COUNT, rows.size());
-            assertEquals(ROW_COUNT, storeCapacity(sequentialStore));
-            assertEquals(ROW_COUNT, storeCapacity(perBatchBarrierStore));
-            assertEquals(ROW_COUNT, storeCapacity(pipelinedStore));
 
-            assertRowsInSourceOrder(sequentialStore, perBatchBarrierStore, pipelinedStore, rows);
-            assertSealed(sequentialStore);
-            assertSealed(perBatchBarrierStore);
-            assertSealed(pipelinedStore);
-            assertEquals("caller still owns executor",
-                    executor.submit(() -> "caller still owns executor").get());
+            assertRowsInSourceOrder(stores, rows);
+            assertExecutorStillUsable(fixedExecutor, "fixed-pool executor remains caller-owned");
+            assertExecutorStillUsable(
+                    virtualThreadPerTaskExecutor,
+                    "virtual-thread-per-task executor remains caller-owned");
         } finally {
-            executor.shutdown();
-            assertTrue(executor.awaitTermination(30, TimeUnit.SECONDS));
+            fixedExecutor.shutdown();
+            virtualThreadPerTaskExecutor.shutdown();
+            boolean fixedExecutorTerminated =
+                    fixedExecutor.awaitTermination(30, TimeUnit.SECONDS);
+            boolean virtualThreadExecutorTerminated =
+                    virtualThreadPerTaskExecutor.awaitTermination(30, TimeUnit.SECONDS);
+            assertTrue(fixedExecutorTerminated);
+            assertTrue(virtualThreadExecutorTerminated);
         }
     }
 
     private static void assertRowsInSourceOrder(
-            HardwoodMarketDataProjectionStore sequentialStore,
-            HardwoodMarketDataProjectionStore perBatchBarrierStore,
-            HardwoodMarketDataProjectionStore pipelinedStore,
+            List<HardwoodMarketDataProjectionStore> stores,
             ArrayList<HardwoodMarketDataRow> rows) {
         for (int rowIndex = 0; rowIndex < ROW_COUNT; rowIndex++) {
             HardwoodMarketDataRow expected = HardwoodParquetDatasetGenerator.rowAt(rowIndex);
-            assertProjectionEquals(expected, sequentialStore.viewAt(rowIndex));
-            assertProjectionEquals(expected, perBatchBarrierStore.viewAt(rowIndex));
-            assertProjectionEquals(expected, pipelinedStore.viewAt(rowIndex));
+            for (HardwoodMarketDataProjectionStore store : stores) {
+                assertProjectionEquals(expected, store.viewAt(rowIndex));
+            }
             assertEquals(expected, rows.get(rowIndex));
         }
+    }
+
+    private static void assertExecutorStillUsable(
+            ExecutorService executor,
+            String message) throws Exception {
+        assertEquals(message, executor.submit(() -> message).get());
     }
 
     private static int storeCapacity(HardwoodMarketDataProjectionStore store)
